vlib/v/checker/tests/asm_index_too_large.out
vlib/v/checker/tests/asm_index_too_large.vv:2:12: error: index too large. largest index is -1, got 1
    1 | unsafe asm amd64 {
    2 |     mov eax, $1
      |               ^
    3 |     mov $0, eax
    4 |     :
vlib/v/checker/tests/asm_index_too_large.vv:3:7: error: index too large. largest index is -1, got 0
    1 | unsafe asm amd64 {
    2 |     mov eax, $1
    3 |     mov $0, eax
      |          ^
    4 |     : 
    5 |     :
