vlib/v/checker/tests/asm_index_too_large.vv
unsafe asm amd64 {
	mov eax, $1
	mov $0, eax
	: 
	: 
	: eax
}
